Rename job from 'Test' to 'CI' in OpenIndiana

--- a/.github/workflows/solaris.yml
+++ b/.github/workflows/solaris.yml
@@ -6,13 +6,12 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    name: A job to run test in OpenIndiana
     env:
       MYTOKEN : ${{ secrets.MYTOKEN }}
       MYTOKEN2: "value2"
     steps:
     - uses: actions/checkout@v4
-    - name: Test in OpenIndiana
+    - name: CI in OpenIndiana
       id: test
       uses: vmactions/openindiana-vm@v0
       with:
@@ -20,7 +19,6 @@ jobs:
         usesh: true
         prepare: |
           pkg install curl libarchive pkgconf
-
         run: |
           bootstrap.sh build
           ./build/muon-bootstrap.exe setup build
